--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,9 @@ android {
 dependencies {
 
     // Status bar changes
-    implementation "com.google.accompanist:accompanist-systemuicontroller:+"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.31.5-beta"
+    // Drawable painter
+    implementation "com.google.accompanist:accompanist-drawablepainter:0.31.5-beta"
     // Navigation Controller
     implementation "androidx.navigation:navigation-compose:2.6.0"
 
