--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-drawablepainter:0.31.5-beta"
     // Navigation Controller
     implementation "androidx.navigation:navigation-compose:2.6.0"
+    // Xposed Library
+    compileOnly("de.robv.android.xposed:api:82")
 
     // Default dependencies
     implementation 'androidx.core:core-ktx:1.10.1'
