--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,4 +33,14 @@
             android:theme="@style/Theme.AppSettings2" />
     </application>
 
+    <meta-data
+        android:name="xposedmodule"
+        android:value="true" />
+    <meta-data
+        android:name="xposedminversion"
+        android:value="93" />
+    <meta-data
+        android:name="xposeddescription"
+        android:value="@string/app_module_summary" />
+
 </manifest>
